// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input field tests input field snapshot 1`] = `
<div
  className="border w-full border-alt-2 field-input mb-10 field-error"
>
  <div
    className="px-4 relative"
  >
    <Field
      className="w-full py-2 field-input__field focus:outline-none relative z-10 bg-transparent font-medium"
      id="test"
      name="test"
      type="text"
    />
    <label
      className="text-secondary font-light tracking-normal absolute py-2 px-4 left-0 transition-all transition-ease z-0 field-input__label text-sm pt-3"
      htmlFor="test"
    >
      test
    </label>
    <FormikConnect(ErrorMessageImpl)
      className="p-sm absolute text-secondary"
      component="p"
      name="test"
    />
  </div>
</div>
`;

exports[`Input field tests input field with icon snapshot 1`] = `
<div
  className="flex border w-full border-alt-2 field-input mb-10 field-error"
>
  <div
    className="pl-4 flex items-center"
  >
    test
  </div>
  <div
    className="flex-1 -ml-2 px-4 relative"
  >
    <Field
      className="w-full py-2 field-input__field focus:outline-none relative z-10 bg-transparent font-medium"
      id="test"
      name="test"
      type="text"
    />
    <label
      className="text-secondary font-light tracking-normal absolute py-2 px-4 left-0 transition-all transition-ease z-0 field-input__label text-sm pt-3"
      htmlFor="test"
    >
      test
    </label>
    <FormikConnect(ErrorMessageImpl)
      className="p-sm absolute text-secondary"
      component="p"
      name="test"
    />
  </div>
</div>
`;
